--- a/style.css
+++ b/style.css
@@ -110,11 +110,7 @@ button:hover {
     background-repeat: no-repeat;
 }
 
-@media screen and (max-width: 880px) {
-
-    #parentButton {
-        display: flex;
-        flex-direction: column;
+@media screen and (max-width: 890px) {
+    .resume {
+        padding: 10px;
     }
-
-}
